[package]
name = "top_down_movement"
version = "0.0.3"
edition = "2024"

[dependencies]
bevy = "0.17"
rand = "0.8"
bevy_pancam = "0.19.0"
bevy_quadtree = { version = "0.16.0" }

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
panic = "abort"
